--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,11 +1,9 @@
-# This workflow will build a Python Package when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Build Python Package
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main  # Thay đổi 'main' thành nhánh mà bạn muốn theo dõi (ví dụ: 'master')
 
 permissions:
   contents: read
@@ -21,17 +19,25 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: "3.9"  # Cập nhật theo phiên bản Python cần thiết
 
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
           python -m pip install build
 
+      - name: Install dependencies
+        run: |
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi  # Cài đặt phụ thuộc từ requirements.txt nếu có
+
       - name: Build release distributions
         run: |
           python -m build
-          
+
+      - name: Ensure dist directory exists
+        run: |
+          mkdir -p dist
+
       - name: Save built distributions as artifacts
         uses: actions/upload-artifact@v4
         with:
